# bilimusic-gtk

./: README.md  meson.build
include/: api.h  ui.h
src/: api_account.c  main.c
src/api/: account.c  get_music.c  import.c  import_manually.c  login_get_info.c  start_get_account.c  start_get_favo.c  start_read_list.c  utils.c
src/ui/: home.c  login.c  source.c  ui_account.c  ui_home.c  ui_source.c
